--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,18 @@
             <artifactId>selenium-java</artifactId>
             <version>3.141.59</version>
         </dependency>
+
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.11</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+        <groupId>io.cucumber</groupId>
+        <artifactId>cucumber-testng</artifactId>
+        <version>6.11.0</version>
         </dependency>
 
     </dependencies>
@@ -59,28 +67,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M5</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
                         <configuration>
                             <includes>
-                                <include>**/Runner.java</include>
+                                <include>**/TestNGRunner.java</include>
                             </includes>
                             <parallel>methods</parallel>
-                            <threadCount>2</threadCount>
-                            <perCoreThreadCount>true</perCoreThreadCount>
+                            <useUnlimitedThreads>true</useUnlimitedThreads>
                         </configuration>
-                    </execution>
-                </executions>
             </plugin>
+
         </plugins>
     </build>
 
