--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
         <version>6.11.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>tech.grasshopper</groupId>
+            <artifactId>extentreports-cucumber6-adapter</artifactId>
+            <version>2.8.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
