--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,18 @@
             <version>2.8.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>4.4.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -75,7 +87,7 @@
                 <version>3.0.0-M5</version>
                         <configuration>
                             <includes>
-                                <include>**/TestNGRunner.java</include>
+                                <include>**/ParallelRunner.java</include>
                             </includes>
                             <parallel>methods</parallel>
                             <useUnlimitedThreads>true</useUnlimitedThreads>
